# example_coding_project

./: .gitignore  README.md  pyproject.toml  simple_coding_project.py
src/temperature_converter/: __init__.py  convert.py
src/tests/: test_converter.py
